--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,62 +1,74 @@
-// 
+//
 // Global
-// 
+//
 
 body,
 html {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+main {
+  display: none;
+}
+.under-construction {
+  //display: none;
+  width: 60%;
+  height: 300px;
+  margin: 0 auto;
+  background: url(../../assets/img//under_construction.gif) no-repeat
+    center/cover;
+  background-size: 100% 100%;
 }
 
 // Content Section
 .content-section {
-    padding-top: 7.5rem;
-    padding-bottom: 7.5rem;
+  padding-top: 7.5rem;
+  padding-bottom: 7.5rem;
 }
 
 .content-section-heading {
-    h2 {
-        font-size: 3rem;
-    }
+  h2 {
+    font-size: 3rem;
+  }
 
-    h3 {
-        font-size: 1rem;
-        text-transform: uppercase;
-    }
+  h3 {
+    font-size: 1rem;
+    text-transform: uppercase;
+  }
 }
 
 .text-faded {
-    color: fade-out($white, 0.3);
+  color: fade-out($white, 0.3);
 }
 
 // Scroll to top button
 .scroll-to-top {
-    position: fixed;
-    right: 15px;
-    bottom: 15px;
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
 
-    display: none;
+  display: none;
 
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
 
-    text-align: center;
+  text-align: center;
 
+  color: $white;
+  background: fade-out($gray-800, 0.5);
+
+  line-height: 45px;
+
+  &:focus,
+  &:hover {
     color: $white;
-    background: fade-out($gray-800, .5);
+  }
 
-    line-height: 45px;
+  &:hover {
+    background: $gray-800;
+  }
 
-    &:focus,
-    &:hover {
-        color: $white;
-    }
-
-    &:hover {
-        background: $gray-800;
-    }
-
-    i {
-        font-weight: 800;
-    }
+  i {
+    font-weight: 800;
+  }
 }
